Agregado SASS al proyecto, al footer y variables

--- a/contacto.html
+++ b/contacto.html
@@ -86,19 +86,17 @@
         
                 
     </section>
-    <footer>
-        <img src="img/logoblanco.png" width="250px" height="auto" alt="logo">
-        <ul>
-            <li><img class="iconos" src="img/instagram.png" alt="icono instagram"><a href="https://www.instagram.com/jufe.design/">/jufe.design</a></li>
-            <li><img class="iconos" src="img/whatsapp.png" alt="icono whatsapp"><div>221-6092110</div></li>
-            <li><img class="iconos" src="img/email.png" alt="icono email"><div>juliferrara1990@gmail.com</div></li>
-            <li><img class="iconos" src="img/gps.png" alt="iconogps"><div>La Plata, Bs. As.</div></li>
+    <footer class="footer">
+        <img class="footer__logo" src="img/logoblanco.png" alt="logo">
+        <ul class="footer__datos">
+            <li class="footer__item"><img class="footer__icon" src="img/instagram.png" alt="icono instagram"><a href="https://www.instagram.com/jufe.design/">/jufe.design</a></li>
+            <li class="footer__item"><img class="footer__icon" src="img/whatsapp.png" alt="icono whatsapp"><div>221-6092110</div></li>
+            <li class="footer__item"><img class="footer__icon" src="img/email.png" alt="icono email"><div>juliferrara1990@gmail.com</div></li>
+            <li class="footer__item"><img class="footer__icon" src="img/gps.png" alt="iconogps"><div>La Plata, Bs. As.</div></li>
         </ul>
     </footer>
     <script src="https://unpkg.com/aos@2.3.1/dist/aos.js"></script>
-    <script>
-      AOS.init({once: "true"});
-    </script>
+    <script>AOS.init({once: "true"});</script>
     <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.9.1/dist/umd/popper.min.js" integrity="sha384-SR1sx49pcuLnqZUnnPwx6FCym0wLsk5JZuNx2bPPENzswTNFaQU1RDvt3wT4gWFG" crossorigin="anonymous"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta3/dist/js/bootstrap.min.js" integrity="sha384-j0CNLUeiqtyaRmlzUHCPZ+Gy5fQu0dQ6eZ/xAww941Ai1SxSY+0EQqNXNE6DZiVc" crossorigin="anonymous"></script>
 </body>
