--- a/index.html
+++ b/index.html
@@ -141,9 +141,9 @@
       <img class="footer__logo" src="img/logoblanco.png" alt="logo">
       <ul class="footer__datos">
           <li class="footer__item"><img class="footer__icon" src="img/instagram.png" alt="icono instagram"><a href="https://www.instagram.com/jufe.design/">/jufe.design</a></li>
-          <li class="footer__item"><img class="footer__icon" src="img/whatsapp.png" alt="icono whatsapp"><div>221-6092110</div></li>
-          <li class="footer__item"><img class="footer__icon" src="img/email.png" alt="icono email"><div>juliferrara1990@gmail.com</div></li>
-          <li class="footer__item"><img class="footer__icon" src="img/gps.png" alt="iconogps"><div>La Plata, Bs. As.</div></li>
+          <li class="footer__item"><img class="footer__icon" src="img/whatsapp.png" alt="icono whatsapp">221-6092110</li>
+          <li class="footer__item"><img class="footer__icon" src="img/email.png" alt="icono email">juliferrara1990@gmail.com</li>
+          <li class="footer__item"><img class="footer__icon" src="img/gps.png" alt="iconogps">La Plata, Bs. As.</li>
       </ul>
   </footer>
 
