--- a/servicios.html
+++ b/servicios.html
@@ -87,6 +87,7 @@
                         piezas impresas y digitales.<br>
                         <span class="bold"> Diseñamos: Manual de marca, Logotipo, sistema gráfico y papelería. Afiches y folletos. Packaging y Etiquetas</span> </p>
                     </div>
+                </div>
         <div>
             <h2><span id="editorial" class="span">Diseño Editorial</span></h2>
                 <div class="row">
@@ -104,17 +105,17 @@
                     </div>
                 </div>
         </div>
-                <h2><span id="ux" class="span">Diseño UX / UI</span></h2>
-                    <div class="row">
-                        <div class="col-6 centrar">
-                            <a href="proyectos.html" class="mas"><img data-aos="fade-right" data-aos-offset="200" data-aos-easing="ease-in-sine" class="imgservicios" src="img/iconoux.png" class="imgservicios" alt="iconoux"></a>
-                        </div>
-                        <div class="col-6 centrar"> 
-                            <p>El diseño de experiencia de usuario y el diseño de interfaces son
-                            clave para el desarrollo de Apps móviles y sitios web óptimos para los usuarios.
-                            </p>
-                        </div>
+            <h2><span id="ux" class="span">Diseño UX / UI</span></h2>
+                <div class="row">
+                    <div class="col-6 centrar">
+                        <a href="proyectos.html" class="mas"><img data-aos="fade-right" data-aos-offset="200" data-aos-easing="ease-in-sine" class="imgservicios" src="img/iconoux.png" class="imgservicios" alt="iconoux"></a>
                     </div>
+                    <div class="col-6 centrar"> 
+                        <p>El diseño de experiencia de usuario y el diseño de interfaces son
+                        clave para el desarrollo de Apps móviles y sitios web óptimos para los usuarios.
+                        </p>
+                    </div>
+                </div>
         <div>
             <h2><span id="audiovisual" class="span">Diseño Audiovisual</span></h2>
                 <div class="row">
@@ -171,9 +172,9 @@
         <img class="footer__logo" src="img/logoblanco.png" alt="logo">
         <ul class="footer__datos">
             <li class="footer__item"><img class="footer__icon" src="img/instagram.png" alt="icono instagram"><a href="https://www.instagram.com/jufe.design/">/jufe.design</a></li>
-            <li class="footer__item"><img class="footer__icon" src="img/whatsapp.png" alt="icono whatsapp"><div>221-6092110</div></li>
-            <li class="footer__item"><img class="footer__icon" src="img/email.png" alt="icono email"><div>juliferrara1990@gmail.com</div></li>
-            <li class="footer__item"><img class="footer__icon" src="img/gps.png" alt="iconogps"><div>La Plata, Bs. As.</div></li>
+            <li class="footer__item"><img class="footer__icon" src="img/whatsapp.png" alt="icono whatsapp">221-6092110</li>
+            <li class="footer__item"><img class="footer__icon" src="img/email.png" alt="icono email">juliferrara1990@gmail.com</li>
+            <li class="footer__item"><img class="footer__icon" src="img/gps.png" alt="iconogps">La Plata, Bs. As.</li>
         </ul>
     </footer>
     <script src="https://unpkg.com/aos@2.3.1/dist/aos.js"></script>
