agregando html mensaje enviado y otros cambios

--- a/servicios.html
+++ b/servicios.html
@@ -71,8 +71,9 @@
         <p class="subhtml">Nos adaptamos a tus necesidades para crear marcas fuertes con identidad</p>
     </section>
     <section class="container-fluid">
-        <div>
-            <h2><span id="identidad"  class="span"> Diseño de Identidad / Marca</span></h2>
+        <div class="fijado"> 
+            <div class="anchor" id="identidad"></div>
+            <h2><span class="span"> Diseño de Identidad / Marca</span></h2>
                 <div class="row">
                     <div class="col-6 centrar">
                         <a href="proyectos.html" class="mas"><img data-aos="fade-right" data-aos-offset="200" data-aos-easing="ease-in-sine" class="imgservicios" src="img/iconoidentidad.png"
@@ -88,8 +89,10 @@
                         <span class="bold"> Diseñamos: Manual de marca, Logotipo, sistema gráfico y papelería. Afiches y folletos. Packaging y Etiquetas</span> </p>
                     </div>
                 </div>
-        <div>
-            <h2><span id="editorial" class="span">Diseño Editorial</span></h2>
+        </div>
+        <div class="fijado">
+            <div class="anchor" id="editorial"></div>
+            <h2><span class="span">Diseño Editorial</span></h2>
                 <div class="row">
                     <div class="col-6 centrar">
                         <a href="proyectos.html" class="mas"><img data-aos="fade-right" data-aos-offset="200" data-aos-easing="ease-in-sine" class="imgservicios" src="img/iconoeditorial.png" class="imgservicios"
@@ -105,7 +108,9 @@
                     </div>
                 </div>
         </div>
-            <h2><span id="ux" class="span">Diseño UX / UI</span></h2>
+        <div class="fijado">
+            <div class="anchor" id="ux"></div>
+            <h2><span class="span">Diseño UX / UI</span></h2>
                 <div class="row">
                     <div class="col-6 centrar">
                         <a href="proyectos.html" class="mas"><img data-aos="fade-right" data-aos-offset="200" data-aos-easing="ease-in-sine" class="imgservicios" src="img/iconoux.png" class="imgservicios" alt="iconoux"></a>
@@ -116,8 +121,10 @@
                         </p>
                     </div>
                 </div>
-        <div>
-            <h2><span id="audiovisual" class="span">Diseño Audiovisual</span></h2>
+        </div>
+        <div class="fijado">
+            <div class="anchor" id="audiovisual"></div>
+            <h2><span class="span">Diseño Audiovisual</span></h2>
                 <div class="row">
                     <div class="col-6 centrar">
                         <a href="proyectos.html" class="mas"><img data-aos="fade-right" data-aos-offset="200" data-aos-easing="ease-in-sine" class="imgservicios" src="img/iconoaudiovisual.png" class="imgservicios"
@@ -131,8 +138,9 @@
                     </div>
                 </div>
         </div>
-        <div>
-            <h2><span id="ilustracion" class="span">Ilustración Digital</span></h2>
+        <div class="fijado">
+            <div class="anchor" id="ilustracion"></div>
+            <h2><span class="span">Ilustración Digital</span></h2>
                 <div class="row">
                     <div class="col-6 centrar">
                         <a href="proyectos.html" class="mas"><img data-aos="fade-right" data-aos-offset="200" data-aos-easing="ease-in-sine" class="imgservicios" src="img/iconoilustracion.png" class="imgservicios"
@@ -147,9 +155,10 @@
                     </div>
                 </div>
         </div>
-        <div>
+        <div class="fijado">
             <div>
-                <h2><span id="redes" class="span">Diseño para Redes Sociales</span></h2>
+                <div class="anchor" id="redes"></div>
+                <h2><span class="span">Diseño para Redes Sociales</span></h2>
                     <div class="row">
                         <div class="col-6 centrar">
                             <a href="proyectos.html" class="mas"><img data-aos="fade-right" data-aos-offset="200" data-aos-easing="ease-in-sine" class="imgservicios" src="img/iconoredes.png" class="imgservicios"
