--- a/enviado.html
+++ b/enviado.html
@@ -68,7 +68,7 @@
         </nav>
     </header>
     
-        <h1 class="margintop"><span class="span">¡Mensaje enviado!</span></h1>
+        <h1 class="margintop titenviado"><span class="span">¡Mensaje enviado!</span></h1>
         <section class="container-fluid"></section>
         <div class="row d-flex">
             <p class="enviado col-8 col-md-8 col-sm-8 col-xs-8">¡Gracias por escribirnos! tu mensaje se envió correctamente y pronto estaremos en contacto con vos.</p>
